# monkeytype-tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: api.rs  config.rs  main.rs  test.rs  ui.rs  words.rs
