[package]
name = "monkeytype-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal client for monkeytype with result sync via ApeKey"
license = "MIT"

[[bin]]
name = "monkeytype"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
